# AI-Reel-Editor

./: .env.example  .env.prod.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  dev.db  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  jobs.py  projects.py
backend/app/core/: config.py  jwt.py
backend/app/db/: session.py
backend/app/media/: rendering.py  transcription.py
backend/app/models/: __init__.py  job.py  project.py  transcript.py  user.py
backend/app/schemas/: auth.py  common.py  job.py  project.py  user.py
backend/app/services/: captioning.py  cleanup.py  ffmpeg.py  jobs.py  ownership.py  projects.py  storage.py
backend/app/tasks/: celery_app.py  video_tasks.py
backend/app/utils/: timecode.py
frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/projects/[id]/: page.tsx
frontend/app/sign-in/: page.tsx
frontend/app/sign-up/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: project-card.tsx  project-detail-client.tsx  project-detail-loader.tsx  site-shell.tsx  upload-form.tsx
frontend/lib/: api.ts  auth.tsx  guest-session.ts  media.ts
frontend/types/: index.ts
